enhancement: improve the get products route to return more descriptive data on the products
