# src/controllers/product.controller.ts
@@ -48,19 +48,29 @@ import type {
   GetProductByIdInputType,
   GetProductsInputType,
 } from '../schemas/productSchemas.js';
+import { constructImageUrl } from '../utils/helpers.utils.js';
 
+type product = {
+  id: number;
+  title: string;
+  price: number;
+  discount?: number;
+  image: string | null;
+  stock: number;
+  category: {
+    id: number;
+    name: string;
+  };
+  seller: {
+    id: number;
+    name: string;
+    image: string | null;
+  };
+  rating: number | null;
+};
 // Define response types for different status codes
 export type GetProductsResponseBody = ApiResponse<{
-  products: {
-    id: number;
-    title: string;
-    price: number;
-    discount?: number;
-    image?: string;
-    stock: number;
-    categoryId: number;
-    sellerId: number;
-  }[];
+  products: product[];
 }>;
 
 // Define types for the request handlers
@@ -121,41 +131,64 @@ export const getProducts: GetProductsHandler = async (req, res, next) => {
         price: true,
         discount: true,
         stock: true,
-        categoryId: true,
-        sellerId: true,
+        category: {
+          select: {
+            id: true,
+            name: true,
+          },
+        },
+        seller: {
+          select: {
+            id: true,
+            businessName: true,
+            image: true,
+          },
+        },
         images: {
           select: {
             path: true,
           },
           where: { isPrimary: true },
         },
+        reviews: {
+          select: {
+            rating: true,
+          },
+        },
       },
     });
 
     const successResponse: SuccessResponse<{
-      products: {
-        id: number;
-        title: string;
-        price: number;
-        discount?: number;
-        image?: string;
-        stock: number;
-        categoryId: number;
-        sellerId: number;
-      }[];
+      products: product[];
     }> = {
       status: 'success',
       data: {
-        products: products.map((product) => ({
-          id: product.id,
-          title: product.title,
-          price: product.price,
-          discount: product.discount,
-          image: product.images[0]?.path,
-          stock: product.stock,
-          categoryId: product.categoryId,
-          sellerId: product.sellerId,
-        })),
+        products: products.map((product) => {
+          const ratingsSum = product.reviews.reduce(
+            (sum, review) => sum + review.rating,
+            0,
+          );
+          const averageRating =
+            product.reviews.length > 0
+              ? ratingsSum / product.reviews.length
+              : null;
+
+          return {
+            id: product.id,
+            title: product.title,
+            price: product.price,
+            discount: product.discount,
+            image: constructImageUrl(req, product.images[0]?.path || null),
+            stock: product.stock,
+            category: product.category,
+            seller: {
+              id: product.seller.id,
+              name: product.seller.businessName,
+              image: constructImageUrl(req, product.seller.image || null),
+            },
+            rating: averageRating,
+          };
+        }),
       },
     };
 
